[package]
name = "sys-ui"
version = "0.1.0"
authors = ["Dmitri Makarov <dmakarov@alumni.stanford.edu>"]
edition = "2021"

[dependencies]
chrono = "0.4"
clap = "2.34"
dioxus = { version = "0.6", features = ["router"] }
fd-lock = "3.0.0"
rust_decimal = "1.23"
separator = "0.4.1"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = { version = "0.9.34" }
solana-clap-utils = "=2.2.1"
solana-client = "=2.2.1"
solana-pubkey = "=2.2.1"
solana-sdk = "=2.2.1"
spl-token = "6.0"
spl-token-2022 = "6.0"
spl-token-cli = "5.1"
sys = { git = "https://github.com/dmakarov/sys.git", branch = "local" }
#sys = { path = "../sys" }
tokio = { version = "1", features = ["macros", "time"] }

[features]
default = ["desktop"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
